# nginxproxymanager-py

./: .gitignore  README.md  pyproject.toml
nginxproxymanager/: __init__.py  client.py  nginx.py  utils.py
nginxproxymanager/types/: __init__.py  proxy_hosts.py  root.py
