[tool.poetry]
name = "nginxproxymanager"
version = "0.1.0"
description = ""
license = "GPLv3"
readme = "README.md"
authors = ["Parker Wahle <regulad@regulad.xyz>"]
homepage = "https://github.com/regulad/nginxproxymanager-py"
repository = "https://github.com/regulad/nginxproxymanager-py"
packages = [
    { include = "nginxproxymanager" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
